--- a/7bibliography.tex
+++ b/7bibliography.tex
@@ -55,8 +55,8 @@
 \bibitem{sparkwww} http://spark.apache.com, Accessed: September 18th, 2014
 \bibitem{hadoop} http://hadoop.apache.com, Accessed: September 18th, 2014
 \bibitem{githubspark} https://github.com/apache/spark, Accessed: September 18th, 2014
-\bibitem{giraphfb} https://www.facebook.com/notes/facebook-engineering/scaling-apache-giraph-to-a-trillion-edges/10151617006153920, Accessed: September 18th, 2014
-\bibitem{sparktoplevel} https://blogs.apache.org/foundation/entry/the\_apache\_software\_foundation\_announces50, Accessed: September 18th, 2014
+\bibitem{giraphfb} https://www.facebook.com/notes/facebook-engineering/scaling-apache-giraph-to-a-\\trillion-edges/10151617006153920, Accessed: September 18th, 2014
+\bibitem{sparktoplevel} https://blogs.apache.org/foundation/entry/the\_apache\_software\_foundation\_\\announces50, Accessed: September 18th, 2014
 \bibitem{sparkgrowingcommunity} http://databricks.com/blog/2013/10/27/the-growing-spark-community.html, Accessed: September 18th, 2014
 \bibitem{mesos} http://mesos.apache.org, Accessed: September 18th, 2014
 \bibitem{ec2} http://aws.amazon.com, Accessed: September 18th, 2014
